| Summary: | ASTERISK-29703: res_pjsip_callerid: Fix OLI parsing | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2021-10-24 13:36:56 | Date Closed: | 2021-11-16 12:40:27.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_caller_id |
| Versions: | 18.7.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fixes PJSIP ANI2 parsing not using the right string. Also improves it to use pjproject native parsing functions, rather than trying to parse the header itself like chan_sip does. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-10-24 13:36:58.281-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-16 12:40:28.951-0600 Change 17481 merged by Friendly Automation: res_pjsip_callerid: Fix OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/17481|https://gerrit.asterisk.org/c/asterisk/+/17481] By: Friendly Automation (friendly-automation) 2021-11-16 12:46:27.779-0600 Change 16632 merged by Friendly Automation: res_pjsip_callerid: Fix OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/16632|https://gerrit.asterisk.org/c/asterisk/+/16632] By: Friendly Automation (friendly-automation) 2021-11-16 12:47:03.883-0600 Change 17483 merged by Friendly Automation: res_pjsip_callerid: Fix OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/17483|https://gerrit.asterisk.org/c/asterisk/+/17483] By: Friendly Automation (friendly-automation) 2021-11-16 15:45:29.318-0600 Change 17482 merged by Kevin Harwell: res_pjsip_callerid: Fix OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/17482|https://gerrit.asterisk.org/c/asterisk/+/17482] | ||